--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "jquery": "^3.4.1",
+    "materialize-css": "^1.0.0-rc.2",
     "morgan": "^1.9.1",
     "pg": "^7.12.1",
     "superagent": "^5.1.0"
