--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "lint": "eslint .",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "pretest": "npm run lint",
+    "test": "cd public && npm i esm jsdom && npx qunit test/index.js",
     "start": "node server.js",
     "start:watch": "nodemon server.js"
   },
